# my-boilerplates

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  README.md  context.md  deploy-registry.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: test-boilerplates.yml
.gitlab/ci/: _templates.yml  deploy.yml  docker-build.yml  validate-ai-context.yml  validate-bot.yml  validate-cli.yml  validate-native-app.yml  validate-web.yml
ai-context/: README.md
ai-context/docs/: data-flow.md  index.md
ai-context/react-router-ssr-mcp/: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
bot/: README.md
bot/docs/: 00-common-patterns.md  01-slack-processor-ts.md  02-slack-processor-cloudflare.md  03-slack-processor-python.md  04-comparison.md  index.md
bot/slack-processor-python/: SETUP.md
bot/slack-processor-ts/: SETUP.md
bot/slack-processor-ts-cloudflare/: SETUP.md
cli/: README.md
cli/bubbletea-go/: .gitignore  README.md  go.mod
cli/docs/: 01-ratatui-rs.md  02-bubbletea-go.md  03-ink-ts.md  04-npm-distribution.md  05-comparison.md  index.md
cli/ink-ts/: README.md  (+2 more)
cli/ratatui-rs/: Cargo.toml  README.md
cli/ratatui-rs/.github/workflows/: release.yml
cli/ratatui-rs/npm/: package.json
cli/ratatui-rs/src/: main.rs
docs/: DEPLOY.md  DEPLOY_CLOUDFLARE.md  LOCAL_DEV_SETUP.md  TROUBLESHOOT.md
game/: README.md
native-app/: README.md
native-app/tauri-react-router/src-tauri/: Cargo.toml  tauri.conf.json
native-app/tauri-react-router/src-tauri/capabilities/: default.json
native-app/tauri-react-router/src-tauri/icons/: icon.icns
native-app/tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
native-app/tauri-react/src-tauri/capabilities/: default.json
native-app/tauri-react/src-tauri/src/: main.rs
web/: README.md
(+261 files in other folders)
